--- a/flask_app/Dockerfile
+++ b/flask_app/Dockerfile
@@ -1,8 +1,9 @@
-FROM python:3
+FROM python:3.7
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD requirements.txt /code/
+ADD flask_app/requirements.txt /code/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-ADD . /code/
+ADD flask_app /code/
+ENV FLASK_APP=appinit
