--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -6,6 +6,7 @@ Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 graphene==2.1.9
 graphene-sqlalchemy==2.3.0
+graphene-sqlalchemy-filter==1.13.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 graphql-server-core==1.1.1
@@ -18,6 +19,7 @@ promise==2.3
 psycopg2==2.9.3
 pytz==2022.1
 Rx==1.6.1
+schematics==2.1.1
 singledispatch==3.7.0
 six==1.16.0
 SQLAlchemy==1.4.35
